// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente GifExpertApp Debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    App By BestoWaifu02 (Diego Robledo Mendoza)
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="dragon ball"
      key="dragon ball"
    />
    <GifGrid
      category="ghalo"
      key="ghalo"
    />
  </ol>
</Fragment>
`;

exports[`Pruebas en el componente GifExpertApp Debe hacer match con la snapshot  1`] = `
<Fragment>
  <h2>
    App By BestoWaifu02 (Diego Robledo Mendoza)
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
